--- a/framework/assets/css/website_styles.css
+++ b/framework/assets/css/website_styles.css
@@ -24,3 +24,13 @@ html, body{margin: 0; width: 100% ; height: 100%; font-family: "Blender Pro", se
 
     background-color: rgb(244, 244, 244);
 }
+
+body{
+    min-height: 100vh;
+    /* mobile viewport bug fix */
+    min-height: -webkit-fill-available;
+}
+
+html {
+    height: -webkit-fill-available;
+}
